# UKB-Git-Audit-Tool

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: build_and_release.yml
src/: access_management.py  environment_validator.py  git_audit.py  html_report_generator.py  main.py  utilities.py
tests/: README.md  __init__.py  test_environment_validator.py  test_git_audit.py  test_main.py
