[project]
name = "demo_ga"
version = "1.0.0"
description = ""
authors = [
    {name = "Bruce Dickie", email = "bruce.dickie@ukbiobank.ac.uk"},
    {name = "Harish Kumar", email = "harish.kumar@ukbiobank.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "regex (>=2023.0.0)",
    "pandas (==2.2.3)",
    "pytest (>=7.0.0)",
    "numpy (==2.2.0)",
    "openpyxl (==3.1.5)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2024.2)",
    "six (==1.17.0)",
    "tzdata (==2024.2)",
    "pytest (==8.4.1)",
    "tqdm (==4.67.1)",
    "boto3 (>=1.40.31,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "chardet (>=5.2.0,<6.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false