[project]
name = "demo_ga"
version = "1.0.0"
description = ""
authors = [
    {name = "Bruce Dickie", email = "bruce.dickie@ukbiobank.ac.uk"},
    {name = "Harish Kumar", email = "harish.kumar@ukbiobank.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "regex (>=2023.0.0)",
    "pandas (==2.2.3)",
    "pytest (>=7.0.0)",
    "numpy (==2.2.0)",
    "tqdm (==4.67.1)",
    "requests (>=2.32.5,<3.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false